--- a/llm_research_assistant/requirements.txt
+++ b/llm_research_assistant/requirements.txt
@@ -2,7 +2,7 @@ fastapi == 0.95.2
 uvicorn
 motor
 pymongo
-pydantic >1.8.1,<2.0.0
+pydantic >=1.6.2,<1.7 || >1.7,<1.7.1 || >1.7.1,<1.7.2 || >1.7.2,<1.7.3 || >1.7.3,<1.8 || >1.8,<1.8.1 || >1.8.1,<2.0.0
 requests
 streamlit
 python-dotenv
