--- a/llm_research_assistant/requirements.txt
+++ b/llm_research_assistant/requirements.txt
@@ -14,5 +14,7 @@ pydantic[email]
 python-multipart
 openai
 langchain
-google-auth
-google-api-python-client
+google-auth == 2.38.0
+google-auth-oauthlib == 1.2.1
+google-auth-httplib2 == 0.2.0
+google-api-python-client == 2.160.0
